update login and modified inforAndLeftMenu.jsp

--- a/web/Public/css/main.css
+++ b/web/Public/css/main.css
@@ -529,3 +529,8 @@ iframe {
 .mysignup{
     padding: 80px 130px 30px 86px;
 }
+.invalid{
+    color: red !important;
+    display: none;
+    margin-left: 20%;
+}
