--- a/web/Public/css/custom.css
+++ b/web/Public/css/custom.css
@@ -1,8 +1,13 @@
 /*********************************************************************************
 
-	Template Name: Boighor Bookshop Responsive Bootstrap4 Template  
+	Template Name: Boighor Bookshop Responsive Bootstrap4 Template
 	Description: Template description
 	Version: 1.0
 	Note: This is custom css. All custom styles (user styles) declare here.
 
 **********************************************************************************/
+/*.abc{*/
+/*    background-size: cover;*/
+/*    background-position: center,center;*/
+/*    background-repeat: no-repeat;*/
+/*}*/
