--- a/web/Public/css/custom.css
+++ b/web/Public/css/custom.css
@@ -11,3 +11,6 @@
 /*    background-position: center,center;*/
 /*    background-repeat: no-repeat;*/
 /*}*/
+.hiden{
+    display: none !important;
+}
