--- a/web/Public/css/custom.css
+++ b/web/Public/css/custom.css
@@ -11,3 +11,9 @@
 /*    background-position: center,center;*/
 /*    background-repeat: no-repeat;*/
 /*}*/
+.field__search{
+    top: 7% !important;
+}
+.white{
+    color: #ffffff !important;
+}
