--- a/web/Public/css/custom.css
+++ b/web/Public/css/custom.css
@@ -147,3 +147,225 @@
     display: none;
     margin-left: 20%;
 }
+/*userprofile*/
+.main {
+    display: table-row;
+    height: 100%; }
+
+.main-inner {
+    padding: 15px 0px; }
+.widget {
+    margin-bottom: 30px; }
+.widget .menu {
+    list-style: none;
+    margin: 0px;
+    padding: 0px; }
+.widget .menu li a {
+    border-bottom: 1px dashed rgba(0, 0, 0, 0.1);
+    color: rgba(54, 54, 54, 0.6);
+    line-height: 26px;
+    display: block;
+    padding: 7px 0px;
+    transition: all .15s linear; }
+.widget .menu li a:hover {
+    color: #009f8b;
+    padding-left: 5px; }
+.widget .menu li a strong {
+    color: #009f8b;
+    font-size: 11px; }
+.widget .menu li:last-child a {
+    border-bottom: 0px; }
+.widget .menu-advanced {
+    background-color: #fff;
+    list-style: none;
+    margin: 0px;
+    padding: 20px; }
+.widget .menu-advanced li {
+    margin: 0px 0px 5px 0px;
+    position: relative;
+    transition: all .15s linear; }
+.widget .menu-advanced li a {
+    color: #444;
+    display: block;
+    padding: 10px 15px; }
+.widget .menu-advanced li a .fa {
+    color: #b6b7b8;
+    font-size: 13px;
+    width: 20px; }
+.widget .menu-advanced li.active {
+    background-color: #009f8b; }
+.widget .menu-advanced li.active a {
+    color: #fff; }
+.widget .menu-advanced li.active a .fa {
+    color: #fff; }
+.widget .menu-advanced li.active:hover {
+    background-color: #009f8b; }
+.widget .menu-advanced li.active:after {
+    color: #fff; }
+.widget .menu-advanced li:after {
+    color: #b6b7b8;
+    content: '\f054';
+    font-family: 'FontAwesome';
+    font-size: 10px;
+    position: absolute;
+    right: 10px;
+    top: 12px; }
+.widget .menu-advanced li:hover {
+    background-color: rgba(0, 0, 0, 0.03); }
+.widget .menu-advanced li:last-child {
+    margin: 0px; }
+.user-photo {
+    background-color: #fff;
+    border: 2px dashed #e9e9e9;
+    padding: 15px;
+    position: relative; }
+.user-photo img {
+    height: auto;
+    width: 100%; }
+
+.user-photo-action {
+    background-color: rgba(255, 255, 255, 0.85);
+    bottom: 15px;
+    color: #363636;
+    left: 15px;
+    padding: 8px 0px;
+    position: absolute;
+    text-align: center;
+    right: 15px; }
+.page-title {
+    border-bottom: 1px solid #e9e9e9;
+    margin: 0px 0px 30px 0px;
+    padding: 0px 0px 20px 0px; }
+.page-title h1 {
+    color: #363636;
+    font-size: 36px;
+    font-weight: 300;
+    margin: 0px;
+    padding: 0px; }
+
+.form-control {
+    display: block;
+    width: 100%;
+    height: 34px;
+    padding: 6px 12px;
+    font-size: 14px;
+    line-height: 1.42857;
+    color: #555555;
+    background-color: #fff;
+    background-image: none;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
+    box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
+    -webkit-transition: border-color ease-in-out 0.15s, box-shadow ease-in-out 0.15s;
+    -o-transition: border-color ease-in-out 0.15s, box-shadow ease-in-out 0.15s;
+    transition: border-color ease-in-out 0.15s, box-shadow ease-in-out 0.15s; }
+.form-control:focus {
+    border-color: #66afe9;
+    outline: 0;
+    -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(102, 175, 233, 0.6);
+    box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(102, 175, 233, 0.6); }
+.form-control::-moz-placeholder {
+    color: #999;
+    opacity: 1; }
+.form-control:-ms-input-placeholder {
+    color: #999; }
+.form-control::-webkit-input-placeholder {
+    color: #999; }
+.form-control[disabled], .form-control[readonly],
+fieldset[disabled] .form-control {
+    background-color: #eeeeee;
+    opacity: 1; }
+.form-control[disabled],
+fieldset[disabled] .form-control {
+    cursor: not-allowed; }
+
+textarea.form-control {
+    height: auto; }
+
+input[type="search"] {
+    -webkit-appearance: none; }
+
+@media screen and (-webkit-min-device-pixel-ratio: 0) {
+    input[type="date"].form-control,
+    input[type="time"].form-control,
+    input[type="datetime-local"].form-control,
+    input[type="month"].form-control {
+        line-height: 34px; }
+    input[type="date"].input-sm, .input-group-sm > input[type="date"].form-control,
+    .input-group-sm > input[type="date"].input-group-addon,
+    .input-group-sm > .input-group-btn > input[type="date"].btn, .detail-gallery
+    .input-group-sm > .input-group-btn > input[type="date"].owl-next, .detail-gallery
+    .input-group-sm > .input-group-btn > input[type="date"].owl-prev,
+    .input-group-sm input[type="date"],
+    input[type="time"].input-sm,
+    .input-group-sm > input[type="time"].form-control,
+    .input-group-sm > input[type="time"].input-group-addon,
+    .input-group-sm > .input-group-btn > input[type="time"].btn,
+    .detail-gallery
+    .input-group-sm > .input-group-btn > input[type="time"].owl-next,
+    .detail-gallery
+    .input-group-sm > .input-group-btn > input[type="time"].owl-prev,
+    .input-group-sm
+    input[type="time"],
+    input[type="datetime-local"].input-sm,
+    .input-group-sm > input[type="datetime-local"].form-control,
+    .input-group-sm > input[type="datetime-local"].input-group-addon,
+    .input-group-sm > .input-group-btn > input[type="datetime-local"].btn,
+    .detail-gallery
+    .input-group-sm > .input-group-btn > input[type="datetime-local"].owl-next,
+    .detail-gallery
+    .input-group-sm > .input-group-btn > input[type="datetime-local"].owl-prev,
+    .input-group-sm
+    input[type="datetime-local"],
+    input[type="month"].input-sm,
+    .input-group-sm > input[type="month"].form-control,
+    .input-group-sm > input[type="month"].input-group-addon,
+    .input-group-sm > .input-group-btn > input[type="month"].btn,
+    .detail-gallery
+    .input-group-sm > .input-group-btn > input[type="month"].owl-next,
+    .detail-gallery
+    .input-group-sm > .input-group-btn > input[type="month"].owl-prev,
+    .input-group-sm
+    input[type="month"] {
+        line-height: 30px; }
+    input[type="date"].input-lg, .input-group-lg > input[type="date"].form-control,
+    .input-group-lg > input[type="date"].input-group-addon,
+    .input-group-lg > .input-group-btn > input[type="date"].btn, .detail-gallery
+    .input-group-lg > .input-group-btn > input[type="date"].owl-next, .detail-gallery
+    .input-group-lg > .input-group-btn > input[type="date"].owl-prev,
+    .input-group-lg input[type="date"],
+    input[type="time"].input-lg,
+    .input-group-lg > input[type="time"].form-control,
+    .input-group-lg > input[type="time"].input-group-addon,
+    .input-group-lg > .input-group-btn > input[type="time"].btn,
+    .detail-gallery
+    .input-group-lg > .input-group-btn > input[type="time"].owl-next,
+    .detail-gallery
+    .input-group-lg > .input-group-btn > input[type="time"].owl-prev,
+    .input-group-lg
+    input[type="time"],
+    input[type="datetime-local"].input-lg,
+    .input-group-lg > input[type="datetime-local"].form-control,
+    .input-group-lg > input[type="datetime-local"].input-group-addon,
+    .input-group-lg > .input-group-btn > input[type="datetime-local"].btn,
+    .detail-gallery
+    .input-group-lg > .input-group-btn > input[type="datetime-local"].owl-next,
+    .detail-gallery
+    .input-group-lg > .input-group-btn > input[type="datetime-local"].owl-prev,
+    .input-group-lg
+    input[type="datetime-local"],
+    input[type="month"].input-lg,
+    .input-group-lg > input[type="month"].form-control,
+    .input-group-lg > input[type="month"].input-group-addon,
+    .input-group-lg > .input-group-btn > input[type="month"].btn,
+    .detail-gallery
+    .input-group-lg > .input-group-btn > input[type="month"].owl-next,
+    .detail-gallery
+    .input-group-lg > .input-group-btn > input[type="month"].owl-prev,
+    .input-group-lg
+    input[type="month"] {
+        line-height: 46px; } }
+
+.form-group {
+    margin-bottom: 15px; }
